objects/ssot__CustodyChainEntry__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CustodianId__c</fullName>
        <label>Custodian</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustodianObject__c</fullName>
        <label>Custodian Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustodyChainEntryStatus__c</fullName>
        <label>Custody Chain Entry Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustodyChainEntryVerfProcType__c</fullName>
        <label>Custody Chain Entry Verf Proc Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustodyChainEntryVerfType__c</fullName>
        <label>Custody Chain Entry Verf Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustodyItemId__c</fullName>
        <label>Custody Item</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Custody Chain Entry Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ItemCustodySiteId__c</fullName>
        <label>Item Custody Site</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ItemCustodySiteObject__c</fullName>
        <label>Item Custody Site Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordUpdateInformation__c</fullName>
        <label>Record Update Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceRecordId__c</fullName>
        <label>Reference Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceRecordObject__c</fullName>
        <label>Reference Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658745374_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustodyChainEntry_CustodianId_map_Ac_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CustodyChainEntry_CustodianId_map_Ac_rel</relationshipLabel>
        <relationshipName>rel_1731658745374_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658760906_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustodyChainEntry_ItemCustodySiteId__rel</label>
        <referenceTo>ssot__Address__dlm</referenceTo>
        <relationshipLabel>CustodyChainEntry_ItemCustodySiteId__rel</relationshipLabel>
        <relationshipName>rel_1731658760906_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658762337_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustodyChainEntry_CustodyItemId_map__rel</label>
        <referenceTo>ssot__CustodyItem__dlm</referenceTo>
        <relationshipLabel>CustodyChainEntry_CustodyItemId_map__rel</relationshipLabel>
        <relationshipName>rel_1731658762337_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>